syntax = "proto3";

option go_package = "calcpb";

message SumRequest {
    int32 first_number = 1;
    int32 second_number = 2; 
}

message SumResponse {
    int32 sum_result = 1;
}

message PrimeNumberDecompRequest {
    int64 number = 1;
}

message PrimeNumberDecompResponse {
    int64 prime_factor = 1;
}

service CalculatorService {
    
    rpc Sum(SumRequest) returns(SumResponse) {};

    rpc PrimeNumberDecomp(PrimeNumberDecompRequest) returns(stream PrimeNumberDecompResponse) {};

}